@@ -4,6 +4,9 @@
   github PR 16)
 - libout123: Use strtok_r() to avoid conflicts multithreaded contexts
   (both sides should avoid plain strtok()!).
+- libmpg123:
+-- Un-break DLL builds that need I/O functions defined in libmpg123.c
+   (like mpg123_open(), bug 374).
 
 1.32.9
 ------
